--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
         
         // Настройки с локальными путями
         const settings = {
-            backgroundImage: 'images/background.gif', // Путь к фону
-            avatarImage: 'images/avatar.jpg', // Путь к аватарке
-            audioFile: 'music/dayang-big-baby-tape.mp3', // Путь к музыке
+            backgroundImage: 'images/PinDown.io_fokinm107_1760622031.gif', // Путь к фону
+            avatarImage: 'images/photo_2025-10-15_22-11-28.jpg', // Путь к аватарке
+            audioFile: 'music/Big Baby Tape - Dayang.mp3', // Путь к музыке
             contacts: [
                 { name: 'Telegram', url: 'https://t.me/zhelydok', icon: 'fab fa-telegram' }
                 // Добавьте другие контакты по необходимости
@@ -313,3 +313,4 @@
     </script>
 </body>
 </html>
+
