--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <!-- Контент портфолио -->
         <div id="portfolio-content">
             <img id="avatar" src="" alt="Аватар">
-            <h2>Ваше Имя</h2> <!-- ЗАМЕНИТЕ НА СВОЕ ИМЯ -->
+            <h2>Резонанс</h2> <!-- ЗАМЕНИТЕ НА СВОЕ ИМЯ -->
             <p id="description">Разработчик проекта "CheckScam", эксперт по выявлению мошенников.</p>
             
             <div id="contacts">
@@ -312,3 +312,4 @@
     </script>
 </body>
 </html>
+
