--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <div id="portfolio-content">
             <img id="avatar" src="" alt="Аватар">
             <h2> Резонанс </h2> <!-- ЗАМЕНИТЕ НА СВОЕ ИМЯ -->
-            <p id="description">Разработчик проекта "CheckScam", эксперт по выявлению мошенников.</p>
+            <p id="description">Разработчик проекта "CheckScam".</p>
             
             <div id="contacts">
                 <!-- Контакты будут добавлены здесь -->
@@ -312,5 +312,6 @@
     </script>
 </body>
 </html>
+
 
 
