--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио - Разработчик проекта "CheckScam"</title>
+    <title>Директ - Разработчика проекта "CheckScam"</title>
     <style>
         * {
             margin: 0;
@@ -312,6 +312,7 @@
     </script>
 </body>
 </html>
+
 
 
 
