--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
             avatarImage: 'images/avatar.jpg', // Переименованный файл
             audioFile: 'music/music.mp3', // Переименованный файл
             contacts: [
-                { name: 'Telegram', url: 'https://t.me/zhelydok', icon: 'fab fa-telegram' }
+                { name: 'Директ', url: 'https://t.me/zhelydok', icon: 'fab fa-telegram' }
+                { name: 'Канал проекта', url: 'https://t.me/ScamCheckCannel', icon: 'fab fa-telegram' }
             ]
         };
         
@@ -312,6 +313,7 @@
     </script>
 </body>
 </html>
+
 
 
 
